Update to java 16 (#1281)
* Update to java 11.

This commit only necessarily fixes the compile errors, runtime testing
needs to happen, particularly those classes that use reflection.

* Bump version to 3.3.5

Fix pom issue with asm

* Bump java version in github actions

* Bump java version in azure pipelines

* Update to java 16

* Update workflows to 16

* Update dependency-reduced-pom

* Remove code for < Java 16

* Provide more helpful error message if add-opens wasn't added.